# stt-python

./: .gitignore  README.md  pyproject.toml  setup.py
stt_ai/: __init__.py  client.py  exceptions.py
sttai/: __init__.py  client.py
