[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sttai"
version = "0.1.0"
description = "Official Python SDK for STT.ai - Speech-to-Text API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "STT.ai", email = "hello@stt.ai" },
]
keywords = ["speech-to-text", "stt", "transcription", "whisper", "diarization", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.20.0",
    "websocket-client>=1.0.0",
]

[project.urls]
Homepage = "https://stt.ai"
Documentation = "https://stt.ai/docs/python-sdk"
Repository = "https://github.com/sttaigit/stt-python"
Issues = "https://github.com/sttaigit/stt-python/issues"

[tool.setuptools.packages.find]
include = ["sttai*"]
